[package]
name = "rust_payment_api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"

# SQLX için gerekli kütüphaneler
chrono = { version = "0.4", features = ["serde"] } 
uuid = { version = "1.7", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid", "time"] } # Önceki fix'ler korunmuştur.

# Diğer gerekli kütüphaneler
tower-http = { version = "0.5", features = ["cors", "catch-panic"] }
anyhow = "1.0" 
reqwest = { version = "0.12", features = ["json"] }